--- a/input/config.json
+++ b/input/config.json
@@ -26,7 +26,7 @@
 		"Other"
 	],
 	"Events": {
-		"Title": "OutPut/Events/Event ",
+		"Title": "Output/Events/Event ",
 		"BaseImage" : "BaseName",
 		"Cols" :
 		[
@@ -89,7 +89,7 @@
 		}
 	},
 	"Items": {
-		"Title": "OutPut/Items/Items ",
+		"Title": "Output/Items/Items ",
 		"BaseImage" : "BaseName",
 		"Cols" :[
 			"Id",
@@ -120,7 +120,7 @@
 		}
 	},
 	"Other": {
-		"Title": "OutPut/Other/Other ",
+		"Title": "Output/Other/Other ",
 		"BaseImage" : "BaseName",
 		"Cols" :[
 			"Id",
